feat: ja-netfilter fixed for java25